fix: collapsed book-detail padding causing text bleed; fix logo CSS paths (url(../images/))

--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ body.reader-open {
 .book-detail {
   overflow: hidden;
   transition: height 0.4s ease, padding 0.3s ease;
-  padding: 0 18px;
+  padding: 0;
   background: #FAFBF9;
   height: 0;
 }
@@ -1578,14 +1578,14 @@ body.reader-open {
 
 .brand-logo-left {
   width: 140px;
-  background-image: url(images/culturelook.png);
+  background-image: url(../images/culturelook.png);
   background-position: right center;
   justify-self: start;
 }
 
 .brand-logo-right {
   width: 140px;
-  background-image: url(images/cocoon.png);
+  background-image: url(../images/cocoon.png);
   background-position: left center;
   justify-self: end;
 }
